remove debug. cosmetics: fix scrollbars, setsize improved

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,5 +1,5 @@
 .left-col {
-  width: 490px;
+  width: 480px;
   margin-right: 10px;
   float: left;
 }
@@ -89,7 +89,7 @@ ul.tiles li.unseen {
 /* MESSAGES */
 #message-area {
   overflow: auto;
-  height: 300px;
+  height: 200px;
   width: 100%;
   border: 1px solid black;
 }
@@ -191,8 +191,7 @@ ul.player-words>li {
 }
 
 /* INSTRUCTIONS, INVITE */
-/*#instructions-text { width: 490px; }*/
-#invite-url { width: 490px; }
+#invite-url { width: 480px; }
 
 
 .score-pfpic {
